--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -7,6 +7,19 @@
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
+
+  <nav>
+    <div class="nav-container">
+      <a href="/" class="nav-brand">Masteï</a>
+      <div class="nav-links">
+        <a href="/">Accueil</a>
+        <a href="/table/">Tableau</a>
+      </div>
+    </div>
+  </nav>
+
   {{ content }}
+
+  <script src="/assets/main.js"></script>
 </body>
 </html>
