--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="generator" content="{{ eleventy.generator }}">
+  <meta name="author" content="Guillaume Brioudes Capponi">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/assets/style.css">
 </head>
@@ -14,6 +16,10 @@
       <div class="nav-links">
         <a href="/">Accueil</a>
         <a href="/table/">Tableau</a>
+        <a href="/tags/">Tags</a>
+        <a href="/types/">Types</a>
+        <a href="/books/">Livres</a>
+        <a href="/years/">Années</a>
       </div>
     </div>
   </nav>
