--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -20,6 +20,7 @@
         <a href="/types/">Types</a>
         <a href="/books/">Livres</a>
         <a href="/years/">Années</a>
+        <a href="/dates/">Dates</a>
       </div>
     </div>
   </nav>
