--- a/src/record.liquid
+++ b/src/record.liquid
@@ -12,8 +12,12 @@ eleventyComputed:
 <article>
   <header>
     <h1>{{ record.title }}</h1>
+    {% if record.alias.size > 0 %}
+    <h2 class="subtitle">{{ record.alias | join: " • " }}</h2>
+    {% endif %}
     {% if record.type %}
       <p class="type">Type: {{ record.type }}</p>
+      <p class="type">Ligne: <span class="monospace">{{ record.line }}</span></p>
     {% endif %}
   </header>
 
@@ -21,54 +25,57 @@ eleventyComputed:
     {{ record.description | br_to_paragraph }}
   </section>
 
-  {% if record.tags.size > 0 %}
-    <section class="tags">
-      <h2>Tags</h2>
-      <ul>
-        {% for tag in record.tags %}
-          <li><a href="/tags/{{ tag }}">{{ tag }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
-  {% endif %}
+  <footer>
+    {% if record.tags.size > 0 %}
+      <section class="tags">
+        <h2>Tags</h2>
+        <ul>
+          {% for tag in record.tags %}
+            <li><a href="/tags/{{ tag }}">{{ tag }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
+    {% endif %}
 
-  {% if record.backlinks.size > 0 %}
-    <section class="links">
-      <h2>Rétroliens</h2>
-      <ul>
-        {% for link in record.backlinks %}
-          <li>
-            <a href="/records/{{ link.id }}/">{{ link.title }}</a>
-            {% if link.context.size > 0 %}
-              {% for context in link.context %}
-                <p class="context serif">{{ context }}</p>
-              {% endfor %}
-            {% endif %}
-          </li>
-        {% endfor %}
-      </ul>
-    </section>
-  {% endif %}
+    {% if record.backlinks.size > 0 %}
+      <section class="links">
+        <h2>Rétroliens</h2>
+        <ul>
+          {% for link in record.backlinks %}
+            <li>
+              <a href="/records/{{ link.id }}/">{{ link.title }}</a>
+              {% if link.context.size > 0 %}
+                {% for context in link.context %}
+                  <p class="context serif">{{ context }}</p>
+                {% endfor %}
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+      </section>
+    {% endif %}
 
-  {% if record.links.size > 0 %}
-    <section class="links">
-      <h2>Liens</h2>
-      <ul>
-        {% for link in record.links %}
-          <li><a href="/records/{{ link.id }}/">{{ link.title }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
-  {% endif %}
+    {% if record.links.size > 0 %}
+      <section class="links">
+        <h2>Liens</h2>
+        <ul>
+          {% for link in record.links %}
+            <li><a href="/records/{{ link.id }}/">{{ link.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
+    {% endif %}
 
-  {% if record.books.size > 0 %}
-    <section class="links">
-      <h2>Livres</h2>
-      <ul>
-        {% for book in record.books %}
-          <li><a href="/books/{{ book }}/">{{ book }}</a></li>
-        {% endfor %}
-      </ul>
-    </section>
-  {% endif %}
+    {% if record.books.size > 0 %}
+      <section class="links">
+        <h2>Livres</h2>
+        <ul>
+          {% for book in record.books %}
+            <li><a href="/books/{{ book }}/">{{ book }}</a></li>
+          {% endfor %}
+        </ul>
+      </section>
+    {% endif %}
+  </footer>
+
 </article>
