--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -363,3 +363,17 @@ section h2 {
 .context {
   padding: 12px 16px;
 }
+
+.monospace {
+  font-family: monospace;
+}
+
+.subtitle {
+  margin-top: 0.8em;
+  font-size: 1.2em;
+  color: rgb(120, 119, 116);
+}
+
+footer {
+  border-top: 1px solid rgb(233, 233, 231);
+}
