--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -3,27 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff"> 
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <meta name="generator" content="{{ eleventy.generator }}">
   <meta name="author" content="Guillaume Brioudes Capponi">
   <title>{{ title }}</title>
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:type" content="website">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
-  <nav>
-    <div class="nav-container">
-      <a href="/" class="nav-brand">Masteï</a>
-      <div class="nav-links">
-        <a href="/">Accueil</a>
-        <a href="/table/">Tableau</a>
-        <a href="/tags/">Tags</a>
-        <a href="/types/">Types</a>
-        <a href="/books/">Livres</a>
-        <a href="/years/">Années</a>
-        <a href="/dates/">Dates</a>
-      </div>
-    </div>
-  </nav>
+  <header>
+    <nav class="nav-links">
+      <a href="/">Accueil</a>
+      <a href="/table/">Tableau</a>
+      <a href="/tags/">Tags</a>
+      <a href="/types/">Types</a>
+      <a href="/books/">Livres</a>
+      <a href="/years/">Années</a>
+      <a href="/dates/">Dates</a>
+    </nav>
+  </header>
 
   {{ content }}
 
