--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -19,13 +19,13 @@
 
   <header>
     <nav class="nav-links">
-      <a href="/">Accueil</a>
-      <a href="/table/">Tableau</a>
-      <a href="/tags/">Tags</a>
-      <a href="/types/">Types</a>
-      <a href="/books/">Livres</a>
-      <a href="/years/">Années</a>
-      <a href="/dates/">Dates</a>
+      <a href="/" {% if page.url == "/" %}aria-current="page"{% endif %}>Accueil</a>
+      <a href="/table/" {% if page.url contains "/table/" %}aria-current="page"{% endif %}>Tableau</a>
+      <a href="/tags/" {% if page.url contains "/tags/" %}aria-current="page"{% endif %}>Tags</a>
+      <a href="/types/" {% if page.url contains "/types/" %}aria-current="page"{% endif %}>Types</a>
+      <a href="/books/" {% if page.url contains "/books/" %}aria-current="page"{% endif %}>Livres</a>
+      <a href="/years/" {% if page.url contains "/years/" %}aria-current="page"{% endif %}>Années</a>
+      <a href="/dates/" {% if page.url contains "/dates/" %}aria-current="page"{% endif %}>Dates</a>
     </nav>
   </header>
 
