--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -18,7 +18,7 @@
 <body>
 
   <header>
-    <nav class="nav-links">
+    <nav>
       <a href="/" {% if page.url == "/" %}aria-current="page"{% endif %}>Accueil</a>
       <a href="/table/" {% if page.url contains "/table/" %}aria-current="page"{% endif %}>Tableau</a>
       <a href="/tags/" {% if page.url contains "/tags/" %}aria-current="page"{% endif %}>Tags</a>
