--- a/src/record.liquid
+++ b/src/record.liquid
@@ -56,6 +56,30 @@ eleventyComputed:
       </section>
     {% endif %}
 
+    {% if record.deepLinks.size > 0 %}
+    <section>
+      <details>
+        {% assign totalDeepLinks = 0 %}
+        {% for depth in record.deepLinks %}
+          {% assign totalDeepLinks = totalDeepLinks | plus: depth.size %}
+        {% endfor %}
+
+        <summary>Liens profonds ({{ totalDeepLinks }})</summary>
+        <ol>
+        {% for depth in record.deepLinks %}
+          <li>
+            <ul>
+              {% for record in depth %}
+              <li><a href="/records/{{ record.id }}/">{{ record.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+          {% endfor %}
+        </ol>
+      </details>
+    </section>
+    {% endif %}
+
     {% if record.tags.size > 0 %}
       <section>
         <details>
