--- a/src/record.liquid
+++ b/src/record.liquid
@@ -19,7 +19,7 @@ eleventyComputed:
   </header>
 
   <section class="prose">
-    {{ record.description | frenchQuotes | links_html: record.links | bibliographyIndex: record | br_to_paragraph }}
+    {{ record.description | frenchQuotes | links_html: record | bibliographyIndex: record | br_to_paragraph }}
   </section>
 
   <footer>
