--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,8 +4,8 @@ body {
     -apple-system,
     sans-serif;
   margin: 0 auto;
-  max-width: 650px;
-  padding-top: 48px;
+  max-width: 40em;
+  padding: 1em 0.4em;
 }
 
 a {
