--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -13,6 +13,7 @@
   <meta property="og:title" content="{{ title }}">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#ffffff">
+  <meta name="date" content="{{ today }}" />
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
@@ -24,6 +25,7 @@
       <a href="/tags/" {% if page.url contains "/tags/" %}aria-current="page"{% endif %}>Tags</a>
       <a href="/books/" {% if page.url contains "/books/" %}aria-current="page"{% endif %}>Livres</a>
       <a href="/dates/" {% if page.url contains "/dates/" %}aria-current="page"{% endif %}>Dates</a>
+      <a href="/colophon/" {% if page.url contains "/colophon/" %}aria-current="page"{% endif %}>Colophon</a>
     </nav>
   </header>
 
