--- a/src/record.liquid
+++ b/src/record.liquid
@@ -149,7 +149,7 @@ eleventyComputed:
                 {{ entry.authors | join: ", " }}, {{ entry.year }}.
                 <i>{{ entry.title }}</i>.
                 {{ entry.place }}, {{ entry.publisher }}.
-                ISBN {{ entry.ISBN }}.
+                ISBN : {{ entry.ISBN }}.
               </li>
             {%- endfor -%}
           </ul>
