--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -25,6 +25,7 @@
       <a href="/tags/" {% if page.url contains "/tags/" %}aria-current="page"{% endif %}>Tags</a>
       <a href="/books/" {% if page.url contains "/books/" %}aria-current="page"{% endif %}>Livres</a>
       <a href="/dates/" {% if page.url contains "/dates/" %}aria-current="page"{% endif %}>Dates</a>
+      <a href="/manual/" {% if page.url contains "/manual/" %}aria-current="page"{% endif %}>Manuel</a>
       <a href="/colophon/" {% if page.url contains "/colophon/" %}aria-current="page"{% endif %}>Colophon</a>
     </nav>
   </header>
