--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self';">
-  <meta http-equiv="X-Content-Type-Options" content="nosniff"> 
-  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
-  <meta name="referrer" content="strict-origin-when-cross-origin">
-  <meta name="generator" content="{{ eleventy.generator }}">
-  <meta name="author" content="Guillaume Brioudes Capponi">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self';" />
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="generator" content="{{ eleventy.generator }}" />
+  <meta name="author" content="Guillaume Brioudes Capponi" />
   <title>{{ title }}</title>
-  <meta property="og:title" content="{{ title }}">
-  <meta property="og:type" content="website">
-  <meta name="theme-color" content="#ffffff">
+  <meta property="og:title" content="{{ title }}" />
+  <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#ffffff" />
   <meta name="date" content="{{ today }}" />
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/style.css" />
 </head>
 <body>
 
@@ -25,6 +25,7 @@
       <a href="/tags/" {% if page.url contains "/tags/" %}aria-current="page"{% endif %}>Tags</a>
       <a href="/books/" {% if page.url contains "/books/" %}aria-current="page"{% endif %}>Livres</a>
       <a href="/dates/" {% if page.url contains "/dates/" %}aria-current="page"{% endif %}>Dates</a>
+      <a href="/graph/" {% if page.url contains "/graph/" %}aria-current="page"{% endif %}>Graphe</a>
       <a href="/manual/" {% if page.url contains "/manual/" %}aria-current="page"{% endif %}>Manuel</a>
       <a href="/colophon/" {% if page.url contains "/colophon/" %}aria-current="page"{% endif %}>Colophon</a>
     </nav>
