--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self';" />
-  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta name="generator" content="{{ eleventy.generator }}" />
@@ -33,6 +32,6 @@
 
   {{ content }}
 
-  <script src="/assets/main.js"></script>
+  <script type="module" src="/assets/main.js"></script>
 </body>
 </html>
