--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -26,6 +26,7 @@
       <a href="/dates/" {% if page.url contains "/dates/" %}aria-current="page"{% endif %}>Dates</a>
       <a href="/graph/" {% if page.url contains "/graph/" %}aria-current="page"{% endif %}>Graphe</a>
       <a href="/manual/" {% if page.url contains "/manual/" %}aria-current="page"{% endif %}>Manuel</a>
+      <a href="/wiki/" {% if page.url contains "/wiki/" %}aria-current="page"{% endif %}>Wiki</a>
       <a href="/colophon/" {% if page.url contains "/colophon/" %}aria-current="page"{% endif %}>Colophon</a>
     </nav>
   </header>
