--- a/src/tags/tags.liquid
+++ b/src/tags/tags.liquid
@@ -16,7 +16,7 @@ eleventyComputed:
 
   <ul>
     {% for record in tag.records %}
-      <li><a href="/records/{{ record.id }}">{{ record.title }}</a></li>
+      <li><a href="/records/{{ record.id }}">{{ record.title | frenchQuotes }}</a></li>
     {% endfor %}
   </ul>
 </article>
