--- a/src/records/record.liquid
+++ b/src/records/record.liquid
@@ -21,7 +21,7 @@ eleventyComputed:
   </header>
 
   <section class="prose">
-    {{ record.description | links_html: record | bibliographyIndex: record | br_to_paragraph }}
+    {{ record.description | frenchQuotes | links_html: record | bibliographyIndex: record | br_to_paragraph }}
   </section>
 
   <footer>
